Set jetty java options